<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.imd4008_A4.DrawingCanvas
        android:id="@+id/drawCanvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/drawingOptionsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.example.imd4008_A4.DrawingCanvas>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawingOptionsContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/system_neutral2_800"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="s">

        <LinearLayout
            android:id="@+id/buttonRow2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRow1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/modeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/drawing_mode"
                    android:textColor="#9E9E9E" />

                <Spinner
                    android:id="@+id/selectMode"
                    style="@android:style/Widget.Material.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:entries="@array/modes"
                    android:minHeight="48dp" />
            </LinearLayout>

            <Button
                android:id="@+id/delBtn"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:backgroundTint="@android:color/holo_red_dark"
                android:contentDescription="@string/delete"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_baseline_delete_forever_24"
                app:iconGravity="textStart"
                app:iconPadding="-8dp"
                app:iconSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/buttonRow2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/editBtn"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/edit"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_baseline_edit_24"
                app:iconGravity="textStart"
                app:iconPadding="-8dp"
                app:iconSize="24dp" />

            <Button
                android:id="@+id/eraseBtn"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/erase"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_eraser_solid__1_"
                app:iconGravity="textStart"
                app:iconPadding="-8dp"
                app:iconSize="24dp" />

            <Button
                android:id="@+id/undoBtn"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/undo"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_baseline_undo_24"
                app:iconGravity="textStart"
                app:iconPadding="-8dp"
                app:iconSize="24dp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="101dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/colorDisplay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/colorPickerIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="multiply"
                    android:contentDescription="@string/color_picker"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_colorize_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.imd4008_A4.fragments.ColorPicker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="true"
        android:longClickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_color_picker"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>